fix spawnInvader command